2004-10-13 Seiichi SATO <ssato@sh.rim.or.jp>

	xim could not get the rectangle information of maximized window. fixed.

	* x_window.c (x_window_receive_event): moved x_xic_resized() into...
	* x_screen.c (window_resized): this.

2004-10-13 MINAMI Hirokazu <minami@mistfall.net>

	* man/mlclient.1: Updated.

2004-10-13 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/*/Makefile.in: fixed a stupid bug.
	  (-I${top_builddir}/xwindow -> -I${top_srcdir}/xwindow)

2004-10-12 Seiichi SATO <ssato@sh.rim.or.jp>

	* x_xim.c (search_xim): fixed a bug with multiple displays. (#1034630)

2004-10-11 Seiichi SATO <ssato@sh.rim.or.jp>

	* inputmethod/iiimf/im_iiimf.c (im_get_info): fixed a segfault with
	  htt server provided within ATOK X.

2004-10-11 Seiichi SATO <ssato@sh.rim.or.jp>

	I got "YOUR MEMORY MANAGEMENT IS PERFECT!" message from kik_mem by
	these changes:

	* inputmethod/iiimf/Makefile.in, inputmethod/kbd/Makefile.in,
	  inputmethod/m17nlib/Makefile.in, inputmethod/uim/Makefile.in:
	  added DEB_CFLAGS

	* inputmethod/iiimf/im_iiimf.c, inputmethod/kbd/im_kbd.c,
	  inputmethod/m17nlib/im_m17nlib.c, inputmethod/uim/im_uim.c:
	  - #include <kiklib/kik_mem.h>
	  - minor cleanups.

	* inputmethod/uim/im_uim.c: #include <uim-im-switcher.h>

	* x_im.c, x_im.h: fixed a segfault which is caused by using uim and
	  m17nlib together.

2004-10-10 Seiichi SATO <ssato@sh.rim.or.jp>

	* configure.in:
	  - --disable-kbd.
	  - --enable-dnd -> --disable-dnd
	  - USE_IM_PLUGIN in IM_CFLAGS.
	
	* README.iscii, README.ja, man/mlterm.1, etc/key, x_screen.c,
	  x_screen.c, x_shortcut.c, x_shortcut.h:
	  - removed screen->kbd.
	  - removed XIM_OPEN and XIM_CLOSE.
	  - added IM_HOTKEY.

	* x_screen.h (compare_key_state_with_modmap): new function for
	  callback of input methods.

	* inputmethod/iiimf/im_iiimf.c, inputmethod/uim/im_uim.c,
	  inputmethod/m17nlib/im_m17nlib.c (switch_mode): new functions for
	  IM_HOTKEY.

	* inputmethod/m17nlib/im_m17nlib.c: added status window.
